# dbt_project_northwind

./: README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/mart/: vendas.sql
northwind/models/raw/crm/: raw_crm__new_table.sql
northwind/models/staging/crm/: _crm__models.yml  _crm__sources.yml  stg_crm__new_table.sql  stg_customers.sql
northwind/seeds/: new_table.csv  region_3.csv
